--- a/style.css
+++ b/style.css
@@ -122,6 +122,11 @@ footer > ul {
     width: 250px;
 }
 
+.banner_4 {
+    margin-left: auto;
+    margin-right: 20px; 
+}
+
 li > p {
     font-size: 20pt;
     color: white;
