--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
-/*포함*/
+/*포함-------------------------------*/
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
 
-/*전역 설정*/
+/*전역 설정-------------------------*/
 .background {
     top: 0px;
     background-image: url(https://github.com/Gangjisu/TermProject/blob/main/assets/travel_picture/picture_kyoto_2.jpg?raw=true);
     background-size: cover;
     position: fixed;
-    z-index: -50; /*최후순위*/
+    z-index: -50; /*후순위 배치*/
     width: 100%;
     height: 100%;
 }
@@ -31,30 +31,74 @@ a:hover, a:active {
 
 
 
-/*상단*/
+/*상단-------------------------*/
 
 .page_head {
+    display: flex;
     margin-top: 50px;
 }
 
-.page_head > img {
+.page_head > li > img {
     width: 200px;
     margin-left: 50px;
     background-color: #f74843;
     padding: 15px;
 }
 
-/*소개란*/
+/*검색박스*/
+
+#search-input {
+    font-size: 13pt;
+    background-color: rgb(255, 255, 255, 0);
+    border: none;
+    color: white;
+    border-bottom: #ffffff 1px solid;
+}
+#search-input:focus {
+    outline: none;
+}
+
+#search-button {
+    background-color: rgb(255, 255, 255, 0);
+    border: 1px solid rgb(255, 255, 255, 0);
+    border-radius: 50px;
+    width: 30px;
+    height: 30px;
+    padding-top: 2px;
+}
+
+#search-button:hover{
+    background-color: rgb(169, 169, 169, 0.5);
+}
+
+#search-button:active{
+    background-color: rgb(0, 0, 0, 0.5);
+}
+
+.highlight {
+    background-color: yellow;
+}
+
+/*소개란---------------------------*/
 .introduction {
     margin-left: 50px;
 }
 
-.introduction > .content {
+.introduction > li {
+    display: flex;
+}
+
+.introduction > .infomation {
     color: white;
 }
 
+.introduction > li > img{
+    width: 150px;
+    height: 160px;
+}
 
-/*메뉴*/
+
+/*메뉴--------------------------------*/
 
 .title {
     font-size: 50pt;
@@ -71,28 +115,27 @@ a:hover, a:active {
     margin-bottom: 100px;
 }
 
-/* iframe 초기 상태를 숨김 */
-.major_content {
-    padding-top: 10px;
-    height: 0px;
+/* a 태그에 마우스를 올렸을 때의 스타일 설정 */
+a.toggleButton:hover {
+    color: white; /* 배경색 변경 */
+}
+
+/* 컨텐츠의 기본 스타일 설정 */
+.title_content {
+    height: 0px; /* 기본적으로 컨텐츠를 숨김 */
     overflow: hidden;
-    transition: 3s;
+    background-color: white;
+    transition: 1s;
 }
 
-/* iframe이 활성화 상태일 때만 보임 */
-.active .major_content {
-    height: 9000px; /*3000 * 3 page*/
-    transition: 3s;
-}
-
-/* a 태그가 활성화 상태일 때 색상 변경 */
-.active a {
-    color: #ffffff; /* 클릭 시 색상을 하얀색으로 변경 */
+/* 'active' 클래스가 적용된 컨텐츠의 스타일 설정 */
+.title.active .title_content {
+    height: 100px; /* 'active' 클래스가 적용된 경우 컨텐츠를 표시 */
+    transition: 1s;
 }
 
 
-
-/*하단의 contact 및 배너*/
+/*하단의 contact 및 배너---------------------------*/
 footer {
     background-color: #f74843;
     height: 250px;
@@ -123,16 +166,19 @@ footer > ul {
 }
 
 .banner_4 {
+    width: 215px;
     margin-left: auto;
-    margin-right: 20px; 
+    margin-right: 50px; 
 }
 
-li > p {
+
+
+.banner > li > p {
     font-size: 20pt;
     color: white;
 }
 
-li {
+.banner > li {
     list-style: none;
     color: black;
 }
