--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ a:hover, a:active {
 *{
     padding: 0;
     margin: 0;
+    list-style: none;
     font-family: "Noto Sans Korean", system, sans-serif;
 }
 
@@ -89,6 +90,9 @@ a:hover, a:active {
 }
 
 .introduction > .infomation {
+    width: 500px;
+    height: 100px;
+    border: 1px solid;
     color: white;
 }
 
