--- a/M_diary_style.css
+++ b/M_diary_style.css
@@ -1,6 +1,6 @@
 /*배경*/
 body {
-    background-color: #E8E8E8;
+    background-color: whitesmoke;
 }
 *{padding:0;margin:0}
 li{list-style:none}
@@ -18,33 +18,30 @@ a:hover, a:active {
 /*top bar*/
 .top_bar {
     top: 0;
-    width: 100%;
+    width: 96%;
     z-index: 50;
-    position: fixed;
 }
 
 .top_a {
     margin-left: 50px;
-    font-size: 14pt;
+    font-size: 30pt;
     font-weight: 900;
 }
 
 .current_site {
-    border-bottom: black solid 3pt;
+    border-bottom: #000000 solid 3pt;
 }
 
 .page_head {
-    display: flex;
     list-style: none;
-    margin-top: 10px;
 }
 
 .site_img {
-    width: 200px;
-    height: 88px;
-    padding-inline: 15px;
-    margin-left: 50px;
-    background-color: rgba(245, 245, 245, 0.5);
+    width: 100%;
+    height: auto;
+    padding-inline: 3%;
+    padding-block: 5px;
+    background-color: rgba(245, 245, 245, 1 );
     cursor: pointer;
 }
 
@@ -89,9 +86,9 @@ a:hover, a:active {
 
 .photo_section {
     background-color: rgb(255,255,255,1);
-    top: 130px;
-    width: 600px;
-    height: 500px;
+    top: 80px;
+    width: 460px;
+    height: 430px;
     transition: 1s;
     box-shadow: 1px 15px 20px rgb(0, 0, 0, 0.5);
 }
@@ -133,40 +130,33 @@ div > img {
 
 /*하단의 contact 및 배너---------------------------*/
 footer {
-    font-family: "Noto Sans Korean", system, sans-serif;
     width: 100%;
     background-color: whitesmoke;
-    height: 250px;
+    height: 400px;
     font-size: 11pt;
     font-weight: 900;
 }
 
 footer > ul {
     color: #f74843;
-    display: flex;
+    display: inline;
 }
 
 .banner {
-    margin-top: 80px;
+    margin-top: 30px;
     margin-left: 65px;
 }
 
 .banner_1 {
+    padding-top: 50px;
     width: 255px;
     height: 100px;
     text-align: left;
-    font-size: 12pt;
+    font-size: 20pt;
     font-weight: 250;
 }
 .banner_1 > img {
-    width: 250px;
-    height: auto;
-}
-
-.banner_4 {
-    width: 215px;
-    margin-left: auto;
-    margin-right: 50px;
+    width: 100%;
 }
 
 .banner > li > p {
