--- a/M_memo_style.css
+++ b/M_memo_style.css
@@ -20,13 +20,13 @@ a:hover, a:active {
 /*top bar*/
 .top_bar {
     top: 0;
-    width: 100%;
+    width: 96%;
     z-index: 50;
 }
 
 .top_a {
     margin-left: 50px;
-    font-size: 14pt;
+    font-size: 30pt;
     font-weight: 900;
 }
 
@@ -35,17 +35,14 @@ a:hover, a:active {
 }
 
 .page_head {
-    display: flex;
     list-style: none;
-    margin-top: 10px;
 }
 
 .site_img {
-    width: 200px;
-    height: 88px;
-    padding-inline: 15px;
+    width: 100%;
+    height: auto;
+    padding-inline: 3%;
     padding-block: 1px;
-    margin-left: 50px;
     background-color: rgba(245, 245, 245, 0.5);
     cursor: pointer;
 }
@@ -64,9 +61,6 @@ textarea {
     font-size: 12pt;
     resize: none;
 }
-header {
-    display: flex;
-}
 
 header > input[type="text"] {
     width: 300px;
@@ -74,24 +68,32 @@ header > input[type="text"] {
     padding: 10px;
     font-size: 13px;
     outline: none;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
 }
 header > button {
-    font-size: 16px;
     cursor: pointer;
 }
+
+header {
+    display: flex;
+}
+
 .tool_btn {
-    width: 100px;
-    height: 45px;
+    border-radius: 5px;
+    border: none;
+    width: 50%;
+    margin-inline: 3px;
+    height: 42px;
     background-color: whitesmoke;
     text-align: center;
-    margin-inline: 5px;
-    box-shadow: 0 2px 4px 0 rgba(122, 122, 122, 0.75);
-    border: black solid;
-    border-radius: 2pt;
+    margin-bottom: 5px;
     font-weight: 100;
-    font-size: 11pt;
+    font-size: 15pt;
     overflow: hidden;
+}
+
+.tool_btn > input {
+    font-size: 15pt;
 }
 
 .tool_pt {
@@ -108,39 +110,32 @@ header > button {
 /*하단의 contact 및 배너---------------------------*/
 footer {
     width: 100%;
-    font-family: "Noto Sans Korean", system, sans-serif;
     background-color: whitesmoke;
-    height: 250px;
+    height: 400px;
     font-size: 11pt;
     font-weight: 900;
 }
 
 footer > ul {
     color: #f74843;
-    display: flex;
+    display: inline;
 }
 
 .banner {
-    margin-top: 80px;
+    margin-top: 30px;
     margin-left: 65px;
 }
 
 .banner_1 {
+    padding-top: 50px;
     width: 255px;
     height: 100px;
     text-align: left;
-    font-size: 12pt;
+    font-size: 20pt;
     font-weight: 250;
 }
 .banner_1 > img {
-    width: 250px;
-    height: auto;
-}
-
-.banner_4 {
-    width: 215px;
-    margin-left: auto;
-    margin-right: 50px;
+    width: 100%;
 }
 
 .banner > li > p {
