--- a/index_style.css
+++ b/index_style.css
@@ -3,12 +3,13 @@
 
 /*전역 설정-------------------------*/
 .background {
-    top: 0px;
-    background-image: url(https://cdn.pixabay.com/photo/2023/05/05/06/19/street-7971714_1280.jpg);
-    background-size: cover;
-    filter: blur(3px);
+    top: 0;
+    left: 0;
+    background-image: url('https://cdn.pixabay.com/photo/2016/11/20/08/34/buildings-1842205_1280.jpg');
+    filter: blur(4px) brightness(80%);
     position: fixed;
     z-index: -50; /*후순위 배치*/
+    transition: 1s;
     width: 100%;
     height: 100%;
 }
@@ -162,6 +163,7 @@ a.toggleButton:hover {
 
 /*하단의 contact 및 배너---------------------------*/
 footer {
+    width: 100%;
     background-color: #f74843;
     height: 250px;
     font-size: 11pt;
